# melhora_ai

./: README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json
.github/workflows/: build-desktop.yml
extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
src/: App.css  App.tsx  Toolbar.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ax_watcher.rs  lib.rs  main.rs  win_watcher.rs
src/components/: HistoryPanel.tsx  ModeSelector.tsx  SettingsModal.tsx
src/hooks/: useSettings.ts
src/lib/: mac-rounded-corners.ts  window-corners.ts
src/prompts/: index.ts
src/services/: ai.service.ts  checkupdate.service.ts  history.service.ts  settings.service.ts
src/types/: index.ts
